Sun Oct  1 20:09:42 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * main/enquiry.c: fix the listpackage output logic
  * main/filesdb.c: fix error cleanup in ensure_statoverride
  * lib/myopt.c: add myoptfile() so we can read configuration files

Mon Sep 25 16:19:05 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-divert.pl: don't print version twice on --help

Thu Sep 21 16:29:32 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * debian/shlibs-default.template: removed
  * debian/shlibs-{default,override}: new files
  * debian/rules: install shlibs-{default,override} in /etc/dpkg in dpkg-dev
  * scripts/{dpkg-buildpackage.sh,dpkg-genchanges.pl}: add -S option to only
    upload sources
  * scripts/dpkg-source.1: document new -S option

Sun Sep 17 01:50:34 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-source.1: document -k option for dpkg-buildpackage

Sat 16 Sep 22:55:49 CEST 2000 peter karlsson <peterk@debian.org>

 * doc/sv/822-date.1, doc/sv/dpkg-split.8: Initial Swedish translation.
 * doc/sv/Makefile.in: Added more Swedish manual pages to install.
 * po/sv.po: Fixes and updates.

Fri Sep 15 23:45:21 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * THANKS: update email address for dhd
  * merge hppa fixed from dhd:
    + archtable: add hppa, fixup SuperH entries
    + scripts/dpkg-architecture.pl: add hppa
    + config.sub, config.guess: updated to support hppa
    + main/enquiry.c: fix printarch()

Fri Sep 15 08:00:44 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Some consistency changes for the translation.
  * doc/sv/deb.5, doc/sv/dpkg.8, doc/sv/dselect.8: Translation fixes.

Thu Sep 14 22:31:15 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.
  * doc/sv/deb-control.5, doc/sv/deb-old.5, doc/sv/dpkg.8, doc/sv/md5sum.1,
    doc/sv/start-stop-daemon.8: Initial Swedish translation.
  * doc/sv/Makefile.in: Added more Swedish manual pages to install.
