@@ -32,6 +32,7 @@ man5dir			= $(mandir)/man5
 man8dir			= $(mandir)/man8
 
 sysconfdir		= @sysconfdir@
+dpkgconfdir		= $(sysconfdir)/dpkg
 alternativesdir		= $(sysconfdir)/alternatives
 
 PERL			= @PERL@
