@@ -67,6 +67,7 @@
 #define LISTFILE           "list"
 
 #define ADMINDIR          "#ADMINDIR#"
+#define CONFIGDIR         "#CONFIGDIR#"
 #define STATUSFILE        "status"
 #define AVAILFILE         "available"
 #define LOCKFILE          "lock"
