@@ -26,6 +26,7 @@ dpkg (1.7.0) unstable; urgency=low
   * Clean up fd handling in some places. Closes: Bug#69359,#69360,#69361
   * Document -k option for dpkg-buildpackage. Closes: Bug#71808
   * Install dummy shlibs.default and shlibs.override files
+  * Give dpkg a configurationfile
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
