@@ -3,6 +3,8 @@ Sun Oct  1 20:09:42 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
   * main/enquiry.c: fix the listpackage output logic
   * main/filesdb.c: fix error cleanup in ensure_statoverride
   * lib/myopt.c: add myoptfile() so we can read configuration files
+  * main/main.c: call new myoptfile()
+  * include/Makefile.in, include/dpkg.h.in: add dpkgconfdir
 
 Mon Sep 25 16:19:05 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
 
